--- a/_config.yml
+++ b/_config.yml
@@ -1,5 +1,5 @@
 # Welcome to Jekyll!
-title: Online Resume
+title: Yile Li's Resume
 url:
 baseurl:
 
@@ -25,13 +25,13 @@ section_line: dashed        # section title line, 'solid', 'dashed' or 'none'
 section_background: false   # section title backound, 'true' or 'false'
 skill_level_icon: lightbulb # skill rate icon, 'heart', 'star', 'circle' or 'lightbulb'
 link_icon: true             # show link icon, 'true' or 'false'
-site_footer: true           # show site footer, 'true' or 'false'
+site_footer: false           # show site footer, 'true' or 'false'
 
-# Analytics
-analytics:
-  google:                   # google
-  cloudflare:               # cloudflare
-  umami:                    # umami (Replace it with your own)
-    script: https://u.tarrex.com/u.js
-    website_id: af636e2d-31ae-46f1-9071-82b1745143a9
-    domains: tarrex.github.io,tarrex.com
+# # Analytics
+# analytics:
+#   google:                   # google
+#   cloudflare:               # cloudflare
+#   umami:                    # umami (Replace it with your own)
+#     script: https://u.tarrex.com/u.js
+#     website_id: af636e2d-31ae-46f1-9071-82b1745143a9
+#     domains: tarrex.github.io,tarrex.com
