--- a/_data/data.yml
+++ b/_data/data.yml
@@ -10,12 +10,12 @@ basic:
     path: /assets/images/profile.png # file path or link to your avatar
 
 contact:
-  location: Beijing, China  # location, text or markdown link syntax
+  # location: Beijing, China  # location, text or markdown link syntax
   email: 2021212063023@cuc.edu.cn    # email address
   phone: +86-155-0122-5688  # phone number, the format is "+[Country Code] [Area Code (if applicable)] [Local Phone Number]"
   # website: example.com      # site link without schema, like example.com, will automatically prepend "https://"
 
-  gender:       female            # gender or pronoun
+  # gender:          female       # gender or pronoun
   birthday:        2004-05-30         # birthday
   nationality:      China        # nationality
   visa:                     # passport visa
@@ -101,60 +101,48 @@ contact:
 
 education:
   show: true
-  order: 5
+  order: 1
   title: Education
-  description: |
-    The education section in a resume is where you provide information about your academic background, including any degrees. In this section, you should include the name and location of the institution where you received your degree, the name of the degree or program you completed, and the date of graduation. If you have earned multiple degrees, list them in reverse chronological order, with the most recent degree first.
-
-    In addition to basic information about your education, you may also want to include any academic honors or awards you received, relevant coursework or projects, and your GPA if it is 3.0 or above. If you have recently graduated and do not have much work experience yet, highlighting your education and academic achievements can help demonstrate your potential to succeed in the workplace.
-
   items:
     - institution: Communication University of China(Project 211)
       link: 'https://www.cuc.edu.cn/'
-      date: 09/2021 - 06/2025
+      date: Sept 2021 - Jun 2025
       major: Cyberspace Security
       degree: Bachelor
       description: |
-        Additional information for this institution.
         + GPA : 3.67/4.00 (10%)
-        + Relevant Courses :  
+        + Relevant Courses : Artificial Intelligence(96), Computer Composition and System Architecture(97), Reverse Engineering and Software Security(98), Cybersecurity(97)
 
 
 
 project:
   show: true
-  order: 3
+  order: 2
   title: Projects
-  description: |
-    The project section in a resume is a section where you can highlight any significant projects that you have completed during your education, work experience, or personal endeavors. This section provides a detailed description of your projects that can showcase your skills, abilities, and achievements.
-
-    In this section, you should include the name of the project, the role you played in the project, the duration, the tools and technologies you used, the objective of the project, and the outcome or result achieved. You can also include any relevant metrics or data that demonstrate the impact of the project.
-
-    The project section is especially useful for candidates with limited work experience or those looking to highlight specific skills or accomplishments that may not be apparent in other parts of their resume. It can also be beneficial for candidates in technical or creative fields, where projects play a significant role in showcasing their capabilities.
-
   items:
-    - name: Personal project
-      link: '#'
+    - name: China Enterprise Brand Case Bank
+      link: 
       tags:
-      date: 2015 - 2017
+      date: 2023 - now
       description: |
-        Personal project description...
-        + First
-        + Second
+        + System Development: Led the front-end and back-end development using the Vue.js framework and vben, implementing real-time data display and user interaction features to enhance user experience.
+        + Model Fine-tuning: Participated in fine-tuning the brand large model, focusing on its application in brand reputation analysis to facilitate intelligent brand management.
+        + Reputation Index Model: Conducted preliminary research for the brand reputation index, utilizing the Analytic Hierarchy Process (AHP) and Entropy Method to establish a reputation index model, supporting data-driven decision-making.
+        + Project Contribution: Collaborated as a team member to provide technical support for the 2025 China Advertising Great Wall Award, bridging the gap between academia and industry.
 
-    - name: OSS project
+    - name: Digital Museum of Chinese Language and Characters Project
       link:
       tags: committer
       date:
       description: |
         OSS project description...
-        + First
-        + Second
+        + Platform Development: Contributed to the development of the digital museum platform, utilizing the Vue.js framework to create a responsive front-end interface that enhances user experience and interactivity.
+        + Video Security: Implemented HLS (HTTP Live Streaming) protocol for encrypting streaming video, ensuring the security of digital resources during transmission and playback, successfully generating M3U8 index files containing encryption information.
 
 
 profile:
-  show: true
-  order: 1
+  show: false
+  order: 5
   title: Profile
   description: |
     The profile section in a resume is a brief summary of the applicant's skills, qualifications, and experience. The purpose of this section is to provide a snapshot of the applicant's professional background and highlight their most relevant accomplishments and strengths. It may include information such as the applicant's career objectives, years of experience, areas of expertise, and key achievements.
@@ -163,7 +151,7 @@ profile:
 
 experience:
   show: true
-  order: 2
+  order: 3
   title: Experiences
   description: |
     The experiences section in a resume is a section where you list your previous work experiences and accomplishments. It typically includes information about your previous job titles, companies you worked for, the dates of your employment, and your key responsibilities and achievements in each role. This section is important because it gives potential employers a sense of your work history and the skills and expertise you have developed over time. It can also help demonstrate your ability to contribute value to a new organization based on your past achievements.
@@ -194,7 +182,7 @@ experience:
 
 
 skill:
-  show: true
+  show: false
   order: 4
   title: Skills
   description: |
@@ -246,7 +234,7 @@ skill:
 
 
 certificate:
-  show: true
+  show: false
   order: 6
   title: Certificates
   description: |
@@ -321,7 +309,7 @@ award:
         It's my Example Awared Two by Example.
 
 patent:
-  show: true
+  show: false
   order: 9
   title: Patents
   description: |
@@ -345,7 +333,7 @@ patent:
     + Foo Bar. 2022. Example patent name two. US 654321, filed Oct 3, 2022, and issued Nov 15, 2022.
 
 organization:
-  show: true
+  show: false
   order: 10
   title: Organizations
   description: |
@@ -371,7 +359,7 @@ language:
       level: Professional
 
 interest:
-  show: true
+  show: false
   order: 12
   title: Interests
   description: |
