--- a/_data/data.yml
+++ b/_data/data.yml
@@ -4,10 +4,10 @@ meta:
 
 basic:
   name: Yile Li                      # name
-  # title: Backend Developer           # job title 
+
   avatar:
-    show: true                       # show or hide avatar
-    path: /assets/images/profile.png # file path or link to your avatar
+    show: false                       # show or hide avatar
+    path: /assets/images/profile.png  # file path or link to your avatar
 
 contact:
   # location: Beijing, China  # location, text or markdown link syntax
@@ -110,10 +110,8 @@ education:
       major: Cyberspace Security
       degree: Bachelor
       description: |
-        + GPA : 3.67/4.00 (10%)
+        + GPA : 3.67/4.00 (top 10%)
         + Relevant Courses : Artificial Intelligence(96), Computer Composition and System Architecture(97), Reverse Engineering and Software Security(98), Cybersecurity(97)
-
-
 
 project:
   show: true
@@ -123,7 +121,7 @@ project:
     - name: China Enterprise Brand Case Bank
       link: 
       tags:
-      date: 2023 - now
+      date: 2024
       description: |
         + System Development: Led the front-end and back-end development using the Vue.js framework and vben, implementing real-time data display and user interaction features to enhance user experience.
         + Model Fine-tuning: Participated in fine-tuning the brand large model, focusing on its application in brand reputation analysis to facilitate intelligent brand management.
@@ -132,68 +130,35 @@ project:
 
     - name: Digital Museum of Chinese Language and Characters Project
       link:
-      tags: committer
-      date:
+      # tags: committer
+      date: 2023
       description: |
-        OSS project description...
         + Platform Development: Contributed to the development of the digital museum platform, utilizing the Vue.js framework to create a responsive front-end interface that enhances user experience and interactivity.
         + Video Security: Implemented HLS (HTTP Live Streaming) protocol for encrypting streaming video, ensuring the security of digital resources during transmission and playback, successfully generating M3U8 index files containing encryption information.
-
-
-profile:
-  show: false
-  order: 5
-  title: Profile
-  description: |
-    The profile section in a resume is a brief summary of the applicant's skills, qualifications, and experience. The purpose of this section is to provide a snapshot of the applicant's professional background and highlight their most relevant accomplishments and strengths. It may include information such as the applicant's career objectives, years of experience, areas of expertise, and key achievements.
-
-    A well-crafted profile section can help to grab the attention of potential employers and encourage them to read on and learn more about the applicant's qualifications and experience.
 
 experience:
   show: true
   order: 3
-  title: Experiences
-  description: |
-    The experiences section in a resume is a section where you list your previous work experiences and accomplishments. It typically includes information about your previous job titles, companies you worked for, the dates of your employment, and your key responsibilities and achievements in each role. This section is important because it gives potential employers a sense of your work history and the skills and expertise you have developed over time. It can also help demonstrate your ability to contribute value to a new organization based on your past achievements.
+  title: Competition Experiences
+  # description: |
+  #   The experiences section in a resume is a section where you list your previous work experiences and accomplishments. It typically includes information about your previous job titles, companies you worked for, the dates of your employment, and your key responsibilities and achievements in each role. This section is important because it gives potential employers a sense of your work history and the skills and expertise you have developed over time. It can also help demonstrate your ability to contribute value to a new organization based on your past achievements.
 
   items:
-    - company: Second Company
-      link: '#'
-      tags: Full-time
-      date: 2018.03 - 2019.03
-      role: Backend Developer
-      location: Beijing
+    - company: Mathematical Contest in Modeling Moritorious Winner (Top 6%)
+      # link: '#'
+      # tags: Full-time
+      date: 2024.02
+      # role: Backend Developer
+      # location: Beijing
       description: |
-        Your key responsibilities and achievements in the company.
-        + First
-        + Second
-
-    - company: First Company
-      link:
-      tags: Part-time, remote
-      date: 2017.03 - 2018.03
-      role: Backend Developer
-      location: Beijing
-      description: |
-        Your key responsibilities and achievements in the company.
-        + First
-        + Second
-
-
+        + Independently tackled Problem 2 and collaboratively addressed Problem 3 with teammate.
+        + Innovatively employed large language models to assist in scoring.
 
 skill:
   show: false
   order: 4
-  title: Skills
+  title: Skills&Languages
   description: |
-    The skills section in a resume is a dedicated section where you can list out the various skills that you possess that are relevant to the job you are applying for. This section allows you to highlight your strengths and demonstrate your capabilities to potential employers.
-
-    The skills section can include both hard skills and soft skills. Hard skills are specific technical abilities or knowledge related to a particular job or industry, such as proficiency in programming languages or experience with certain software programs. Soft skills are more general personal traits and abilities, such as communication skills, leadership, problem-solving, or teamwork.
-
-    When crafting your skills section, it's important to tailor it to the specific job you are applying for, and only include skills that are relevant to the position. This can help catch the attention of the hiring manager and demonstrate that you have the qualifications necessary to succeed in the role.
-
-    There are multiple ways to present your skills here. One way is to show them in a rating format. Another way is to group them together. Alternatively, you can use markdown to format it in a way that you prefer.
-
   items:
     - name: Skill A
       level: 5
