--- a/_config.yml
+++ b/_config.yml
@@ -11,12 +11,12 @@ open: true                  # show or hide your resume
 allow_search_engines: true  # allow your resume indexing by search engine, 'true' or 'false'
 description:                # your resume description
 open_graph:
-  enable: true                        # enable open graph meta tags
+  enable: false                        # enable open graph meta tags
   image: /assets/images/profile.png   # path or link to the open graph image
 
 # Style
 date_format: "%Y-%m-%d"     # date format
-theme_color: "#040f1b"      # your favorite theme color
+theme_color: "#00080f"      # your favorite theme color
 contact_delimiter: "·"      # contact delimiter, '·', '/' or '|'
 section_icon: true          # section title icon, true or false
 section_title: uppercase    # section title style, 'uppercase', 'lowercase', 'capitalize' or 'none'
